adjusted spacing on some of the copy for incorrect to match boxes with correct

--- a/src/scss/partials/_termusage.scss
+++ b/src/scss/partials/_termusage.scss
@@ -16,7 +16,6 @@
 
   .term-usage-copy {
     font-family: SourceSansPro-Regular, Arial, Helvetica, sans-serif;
-
     max-width: 290px;
     width: 100%;
   }
@@ -26,6 +25,10 @@
     width: 100%;
     min-height: 12px;
     margin-bottom: 15px !important;
+  }
+
+  .term-explaination {
+    height: auto;
   }
 
   .bottom-area {
